# VibeDnD

./: .cursorrules  .gitignore  AGENTS.md  AI_README.md  CLAUDE.md  README.md  TEST_COVERAGE_ANALYSIS.md  build.py  build_macos.py  build_ubuntu.py  clean_equipment.py  dnd2014_data.json  dnd2024_data.json  dnd2024_scraper.py  generate_placeholders.py  installer.iss  main.py  paths.py  preview_pdf.py  pyproject.toml  requirements.txt  settings.json  vibednd.icns
.claude/: launch.json  settings.local.json
characters/: aleister-holiday_6ae6e845.json  test_c64a46ff.json  testsson_0cd39f19.json
data/: backgrounds.json  class_choices.json  class_progressions.json  classes.json  feats.json  items.json  species.json  spells.json  subclasses.json
export/: json_export.py  pdf_export.py  text_export.py
gui/: add_inventory_dialog.py  app.py  base_step.py  character_viewer.py  data_loader.py  equipment_utils.py  home_screen.py  level_up_wizard.py  lu_base_step.py  lu_step_asi.py  lu_step_choices.py  lu_step_class.py  lu_step_feature_picks.py  lu_step_features.py  lu_step_hp.py  lu_step_languages.py  lu_step_proficiencies.py  lu_step_spells.py  lu_step_subclass.py  lu_step_swap.py  rest_dialog.py  settings_screen.py  sheet_builder.py  sidebar.py  source_config.py  species_trait_utils.py  spell_swap_panel.py  step_ability_scores.py  step_background.py  step_biography.py  step_class.py  step_class_features.py  step_equipment.py  step_feat.py  step_languages.py  step_skills.py  step_species.py  step_spells.py  step_summary.py  theme.py  (+1 more)
models/: ability_bonus_utils.py  enums.py  (+16 more)
(+57 files in other folders)
